--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ BROWSABLE_API_RENDERER=True
 
 # JWT config
 REFRESH_TOKEN_LIFETIME=15
-ACCESS_TOKEN_LIFETIME=5
+ACCESS_TOKEN_LIFETIME=60
 
 # SLACK credentials
 SLACK_WEBHOOK=your_webhook_url
