Update SLACK conf settings

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,20 @@
+# Security and Users
+# Clave secreta. No debe cambiar una vez el sistema ya esta en funcionamiento.
+# https://docs.djangoproject.com/en/dev/ref/settings/#secret-key
+# Se puede generar una nueva clave con:
+# base64 /dev/urandom | fold -w 50 | head -n 1
+SECRET_KEY=##secret_key##
+
 # DRF config
-BROWSABLE_API_RENDERER=True
+BROWSABLE_API_RENDERER=False
 
 # JWT config
-REFRESH_TOKEN_LIFETIME=15
-ACCESS_TOKEN_LIFETIME=60
+REFRESH_TOKEN_LIFETIME=15 #days
+ACCESS_TOKEN_LIFETIME=60 #minutes
 
 # SLACK credentials
-SLACK_WEBHOOK=your_webhook_url
-SLACK_CLIENT_ID=xxxxxxxxxxxx.xxxxxxxxxxxxx
-SLACK_CLIENT_SECRET=xxxxxxxxxxxxxxxxx
 SLACK_BOT_TOKEN=xoxb-xxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxxx
-SLACK_TEST_CHANNEL=your_channel_name
+DOMAIN_NAME_BASE=https://nora.cornershop.io/menu/
 
 # Base employees
 
