--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ redis==3.5.3
 regex==2020.6.8
 sentry-sdk==0.16.0
 six==1.15.0
-slackclient==2.9.3
+slack-sdk==3.4.2
 sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
