--- a/requirements.txt
+++ b/requirements.txt
@@ -11,26 +11,35 @@ celery==4.3.0
 certifi==2020.6.20
 chardet==4.0.0
 click==7.1.2
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==5.2
 Django==3.0.8
 django-extensions==3.0.2
 django-filter==2.4.0
 django-redis==4.11.0
+django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.6.0
+drf-yasg==1.20.0
 flake8==3.8.3
 fluent-logger==0.9.6
 freezegun==0.3.15
 gunicorn==20.0.4
-idna==3.1
+idna==2.10
+inflection==0.5.1
 isort==5.0.5
+itypes==1.2.0
+Jinja2==2.11.3
 kombu==4.6.11
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.4.0
 msgpack==0.6.2
 multidict==5.1.0
 mypy-extensions==0.4.3
+openapi-codec==1.3.2
 packaging==20.4
 pathspec==0.8.0
 pluggy==0.13.1
@@ -55,13 +64,18 @@ python-dateutil==2.8.1
 pytz==2020.1
 redis==3.5.3
 regex==2020.6.8
+requests==2.25.1
+ruamel.yaml==0.17.4
+ruamel.yaml.clib==0.2.2
 sentry-sdk==0.16.0
+simplejson==3.17.2
 six==1.15.0
 slack-sdk==3.4.2
 sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
+uritemplate==3.0.1
 urllib3==1.25.9
 vine==1.3.0
 wcwidth==0.2.5
