update env.example file

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,8 @@ ACCESS_TOKEN_LIFETIME=60 #minutes
 
 # SLACK credentials
 SLACK_BOT_TOKEN=xoxb-xxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxxx
-DOMAIN_NAME_BASE=https://nora.cornershop.io/menu/
+# Without trailing slash
+DOMAIN_NAME_BASE=https://nora.cornershop.io/menu
 
 # Base employees
 
